--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
             </div>
-            <div class="showcase">
+            <div id="home" class="showcase">
                 <div class="content">
                     <h1 class="mainheading">The Sky is the limit</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ut illo laudantium totam. Magnam, possimus.</p>
@@ -31,5 +31,82 @@
             </div>
         </div>
     </header>
+    <main>
+        <div id="what">
+            <div class="container">
+                <h2><span class="text-green">What</span> We Do</h2>
+                <section class="info">
+                    <i class="fa-solid fa-building-columns fa-2x" style="color: #333;"></i>
+                    <div class="content">
+                    <h3>Investment Banking</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi, impedit?</p>
+                </div>
+            </section>
+                </section>
+                <section class="info">
+                    <i class="fa-solid fa-book-open-reader fa-2x" style="color:#333"></i>
+                    <div class="content">
+                        <h3>Portfolio Management</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, veritatis!</p>
+                </div>
+                </section>
+                <section class="info">
+                    <i class="fa-solid fa-pen-fancy fa-2x" style="color:#333"></i>
+                    <div class="content"><h3>Tax & Custodial</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, molestiae.</p>
+                </div>
+                </section>
+            </div>
+        </div>
+        <div id="who">
+            <section class="team"></section>
+            <section class="team-info">
+                <h2><span class="text-green">Who</span> We Are</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus sequi odit omnis expedita veritatis! Quis ratione odit, saepe vel quae quasi officiis voluptatum dolorem aut.</p>
+                <h3>Our Team</h3>
+                <ul>
+                   <li>Karan Bhaskar:CEO</li>
+                   <li>Mark Zuckerberg:CFO</li>
+                   <li>Elon Musk:Lead Accountant</li>
+                   <li>Mark Smith:Investment Manager</li>
+                   <li>Tony Stark:Senior Accountant</li>
+                </ul>
+            </section>
+        </div>
+        <div class="clients container">
+            <h2><span class="text-green">Our</span> Clients</h2>
+            <div class="photo-clients">
+                <div>
+                <img src="./img/logos/logo1.png" alt="Client-1">
+                </div><div>
+                <img src="./img/logos/logo2.png" alt="Client-2">
+                </div><div>
+                <img src="./img/logos/logo3.png" alt="Client-3">
+                </div><div>
+                <img src="./img/logos/logo4.png" alt="Client-4">
+                </div><div>
+                <img src="./img/logos/logo5.png" alt="Client-5">
+            </div>
+            </div>
+        </div>
+        <div id="contact">
+            <div class="contact">
+                <h2>Contact US</h2>
+                <p>Please use the form below to contact us</p>
+                <form><label for="name">Name</label>
+                    <input type="text" placeholder="Enter your name" name="name" id="name">
+                    <label for="email">Email</label>
+                    <input type="email" placeholder="Enter email" name="email"  id="email">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" name="phone" id="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{5}">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" placeholder="Enter message"></textarea>
+                    <submit class="btn btn-dark ">Send</submit>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <h3>Copyright &copy; 2022, Fourleaf Investment, All Rights Reserved</h3>
+    </footer>
 </body>
 </html>
