--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div id="what">
             <div class="container">
                 <h2><span class="text-green">What</span> We Do</h2>
+                <div class="align-horizontal">
                 <section class="info">
                     <i class="fa-solid fa-building-columns fa-2x" style="color: #333;"></i>
                     <div class="content">
@@ -57,6 +58,7 @@
                 </div>
                 </section>
             </div>
+        </div>
         </div>
         <div id="who">
             <section class="team"></section>
